add cors support, load config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DBNAME=deskmate
+      - POSTGRES_DB=deskmate
       - PGDATA=/pgdata
 
   api:
