save / load config

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,6 +13,10 @@ WORKDIR /go/src/github.com/tylerconlee/Deskmate/server
 RUN go get ./
 RUN go build -o deskmate
 
+ENV WAIT_VERSION 2.7.2
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
+RUN chmod +x /wait
+
 # if dev setting will use pilu/fresh for code reloading via docker-compose volume sharing with local machine
 # if production setting will build binary
 CMD if [ ${APP_ENV} = production ]; \
