Revert "`--frozen` added to Dockerfile"

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,13 +11,13 @@ RUN mkdir -p /client
 WORKDIR /client
 COPY ./ ./
 
-RUN npm install --frozen
+RUN npm install
 
 # if dev settings will use create-react start script for hot code relaoding via docker-compose shared volume
 # if production setting will build optimized static files and serve using http-server
 CMD if [ ${NODE_ENV} = production ]; \
 	then \
-	npm install -g http-server --frozen && \
+	npm install -g http-server && \
 	npm run build && \
 	cd build && \
 	hs -p 3000; \
