--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - image: circleci/golang
     steps:
       - checkout
-      - run: pwd
+      - run: cd server
       - go/load-cache
       - go/mod-download-cached
       - go/save-cache
