--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2.1
 orbs:
   node: circleci/node@4.5.0
   go: circleci/go@1.6.0
+executors:
+  golang: go/default
 jobs:
   build-client:
     docker:
@@ -20,11 +22,10 @@ jobs:
             - ./client/node_modules
       - run: cat ./client/package.json #to be replaced with tests later
   build-server:
-    docker:
-      - image: circleci/golang
+    working_directory: /go/src/github.com/tylerconlee/Deskmate/server
+    executor: golang
     steps:
       - checkout
-      - run: cd server
       - go/load-cache
       - go/mod-download-cached
       - go/save-cache
