--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   node: circleci/node@4.5.0
   go: circleci/go@1.6.0
 jobs:
-  build-client:
+  test-client:
     docker:
       - image: circleci/node
     steps:
@@ -19,7 +19,7 @@ jobs:
           paths:
             - ./client/node_modules
       - run: cat ./client/package.json #to be replaced with tests later
-  build-server:
+  test-server:
     working_directory: ~/Deskmate/server
     docker:
       - image: circleci/golang
@@ -35,7 +35,7 @@ jobs:
 
 workflows:
   version: 2
-  front:
+  test:
     jobs:
-      - build-client
-      - build-server
+      - test-client
+      - test-server
