--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,47 @@ version: 2.1
 orbs:
   node: circleci/node@4.5.0
   go: circleci/go@1.6.0
+
+# CCC executor
+executors:
+  ccc:
+    docker:
+    - image: circleci/command-convenience:0.1
+      auth:
+        username: $DOCKER_HUB_USER
+        password: $DOCKER_HUB_PASSWORD
+
 jobs:
+  deploy:
+    executor: ccc
+    environment:
+      NAME: itd-deskmate
+      VALUES_FILE: values.yml
+    working_directory: ~/Deskmate
+    steps: 
+      - checkout
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: cp /tmp/workspace/docker_image.tag .
+      - setup_remote_docker
+      - run: deploy
+
+  publish:
+    executor: ccc
+    environment: # NOTE: requires ECR, not yet established
+      NAME: itd-deskmate
+      DOCKERFILE_PATH: server/Dockerfile # NOTE: requires refactoring of the Dockerfile
+      DOCKER_REGISTRY: ecr
+      TWISTLOCK_ENFORCE: false
+    working_directory: ~/Deskmate
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run: publish
+      - persist_to_workspace:
+          root: .
+          paths: docker_image.tag
+
   test-client:
     docker:
       - image: circleci/node
