namespace added to deploy job via CCC

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
   deploy:
     executor: ccc
     environment:
+      NAMESPACE: internal-tools
       NAME: itd-deskmate
       VALUES_FILE: values.yml
     working_directory: ~/Deskmate
