fixed config to retrieve from DB instead of config.json

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,8 @@ workflows:
       - test-client
       - test-server
       - test-graphql
+  publish-and-deploy:
+    jobs:
       - publish:
           context: org-global
           filters:
