removed CORS handlers

--- a/values.yml
+++ b/values.yml
@@ -53,6 +53,6 @@ traefik:
   rules:
     - host: slackdeskmatehook.circleci.com
       paths:
-        - path: /slack
+        - path: /handler/slack/callback
           servicePort: 8080
   ruleType: Path
