--- a/values.yml
+++ b/values.yml
@@ -59,6 +59,6 @@ traefik:
   rules:
     - host: slackdeskmatehook.circleci.com
       paths:
-        - path: /handler/
+        - path: /handler/*
           servicePort: 8080
   ruleType: Path
